Refactored databases to take advantage of polymorphism