@@ -5,12 +5,25 @@ public class ClearOutput {
         try {
             final String os = System.getProperty("os.name");
 
+            ProcessBuilder processBuilder;
             if (os.contains("Windows")) {
-                Runtime.getRuntime().exec("cls");
+                processBuilder = new ProcessBuilder("cmd", "/c", "cls");
             } else {
-                System.out.print("\033[H\033[2J");
-                System.out.flush();
+                processBuilder = new ProcessBuilder("clear");
             }
+
+            // Attempt to clear the terminal using ProcessBuilder
+            processBuilder.inheritIO().start().waitFor();
+        } catch (final Exception e) {
+            // Fallback to current method if ProcessBuilder fails
+            fallbackClear();
+        }
+    }
+
+    private static void fallbackClear() {
+        try {
+            System.out.print("\033[H\033[2J");
+            System.out.flush();
         } catch (final Exception e) {
             System.out.println("<<<<<Unable to clear screen>>>>>");
         }
